--- a/madTime.html
+++ b/madTime.html
@@ -3,6 +3,8 @@
 
 <head>
 
+    <link rel="stylesheet" href="madlibStyle.css">
+
     <title>Mad lib time</title>
 
 </head>
@@ -42,6 +44,20 @@
         <div>
             <label for="colour">Enter a colour: </label>
             <input type="text" id="colour" name="colour" placeholder="green" required>
+        </div>
+
+        <br>
+
+        <div>
+            <label for="job">Enter a Job: </label>
+            <input type="text" id="job" name="job" placeholder="engineer" required>
+        </div>
+
+        <br>
+
+        <div>
+            <label for="forest">Enter something in a forest: </label>
+            <input type="text" id="forest" name="forest" placeholder="Tree" required>
         </div>
 
         <br>
