finished adding styles to look good

--- a/madTime.html
+++ b/madTime.html
@@ -13,57 +13,57 @@
 
     <form method="post" action="http://127.0.0.1:5000/question">
 
-        <div>
+        <div class="whatHaveYouDone">
             <label for="name">Enter a name: </label>
             <input type="text" id="name" name="name" placeholder="Chris" required>
         </div>
 
         <br>
 
-        <div>
+        <div class="whatHaveYouDone">
             <label for="nameTwo">Enter a second name: </label>
             <input type="text" id="nameTwo" name="nameTwo" placeholder="Briten" required>
         </div>
 
         <br>
 
-        <div>
+        <div class="whatHaveYouDone">
             <label for="location">Enter a location: </label>
             <input type="text" id="location" name="location" placeholder="Beach" required>
         </div>
 
         <br>
 
-        <div>
+        <div class="whatHaveYouDone">
             <label for="animal">Enter a animal: </label>
             <input type="text" id="animal" name="animal" placeholder="Bear" required>
         </div>
 
         <br>
 
-        <div>
+        <div class="whatHaveYouDone">
             <label for="colour">Enter a colour: </label>
             <input type="text" id="colour" name="colour" placeholder="green" required>
         </div>
 
         <br>
 
-        <div>
+        <div class="whatHaveYouDone">
             <label for="job">Enter a Job: </label>
             <input type="text" id="job" name="job" placeholder="engineer" required>
         </div>
 
         <br>
 
-        <div>
+        <div class="whatHaveYouDone">
             <label for="forest">Enter something in a forest: </label>
             <input type="text" id="forest" name="forest" placeholder="Tree" required>
         </div>
 
         <br>
 
-        <div>
-            <input type="submit">
+        <div class="whatHaveYouDone">
+            <input type="submit" id="enter">
         </div>
 
     </form>
