--- a/storyTestPage.html
+++ b/storyTestPage.html
@@ -5,37 +5,42 @@
 
 <style>
     .story {
-    border: solid 2px;
-    padding: 10px;
-    border-radius: 20px;
-    background-color:lightcyan;
-}
+        border: solid 2px;
+        padding: 10px;
+        border-radius: 20px;
+        background-color:lightcyan;
+    }
 
-label {
-    font-size: 1.05em;
-}
+    #theStory {
+        position: absolute;
+        right: 2.5%;
+        left: 2.5%;
+        border: solid 2px;
+        padding: 10px;
+        border-radius: 20px;
+        background-color:lightcyan;
+        z-index: 2;
+    }
 
-input {
-    border: solid 2px;
-    padding: 6px;
-    border-radius: 15px;
-    background-color:lightcyan;
-}
+    label {
+        font-size: 1.05em;
+    }
 
-#whatHaveYouDone {
-    border: solid 2px;
-    padding: 10px;
-    border-radius: 20px;
-    background-color:lightcyan;
-    position: absolute;
-    bottom: 15px;
-    right: 25px;
-    width: 80%;
-}
+    #whatHaveYouDone {
+        border: solid 2px;
+        padding: 10px;
+        border-radius: 20px;
+        background-color:darkseagreen;
+        position: absolute;
+        bottom: 15px;
+        right: 25px;
+        width: 80%;
+        z-index: 1;
+    }
 
-body {
-    background-color:lightsalmon;
-}
+    body {
+        background-color:lightsalmon;
+    }
 </style>
 
     <title>Story Time</title>
@@ -48,49 +53,54 @@ body {
         beach night trip
     </h1>
 
-    <div class="story">
+    <div id="theStory">
         <label>
             Chris and Briten wanted to go to the Beach at night. However there were engineer workers. Chris and Briten walked up beside the engineer workers, slowly disipering into the bushes. Once in the darknes they started to run, Briten ran dirictly into a Tree. When they got to the road they saw a Green truck speeding tawords them. To avoid the Green truck Chris and Briten hid in the drive way to the Beach. When the Green truck turned into the drive way to the Beach at max speed Chris and Briten dove into the bushes with a loud crunch. The Green truck whent to a full stop rolled down his window and asked, "People or Bear?" Chris replyd "People", and the truck dive said "Oh Okay", and drove away. Chris and Briten filany made it to the Beach and had a great time.
         </label>      
     </div>
         
-    <div id="whatHaveYouDone">
-        <br>
-        <span class="story">
-            <label>
-                Name 1: {firstName}
-            </label>
-        </span>
-        <span class="story">
-            <label>
-                Name 1: {secondName}
-            </label>
-        </span>
-        <span class="story">
-            <label>
-                Name 1: {locationName}
-            </label>
-        </span>
-        <br>
-        <br>
-        <br>
-        <span class="story">
-            <label>
-                Name 1: {data['job']}
-            </label>
-        </span>
-        <span class="story">
-            <label>
-                Name 1: {data['colour']}
-            </label>
-        </span>
-        <span class="story">
-            <label>
-                Name 1: {data['animal']}
-            </label>
-        </span>
-        <br>
-        <br>
+    <table id="whatHaveYouDone">
+        <tr>
+            <th class="story">
+                <label>
+                    Name 1: {firstName}
+                </label>
+            </th>
+            <th class="story" colspan="2">
+                <label>
+                    Location: {locationName}
+                </label>
+            </th>
+            <th class="story">
+                <label>
+                    Name 2: {secondName}
+                </label>
+            </th>
+        </tr>
+
+        <tr>
+            <th class="story">
+                <label>
+                    Ocupation: {data['job']}
+                </label>
+            </th>
+            <th class="story">
+                <label>
+                    Colour: {data['colour']}
+                </label>
+            </th>
+            <th class="story">
+                <label>
+                    Animal: {data['animal']}
+                </label>
+            </th>
+            <th class="story">
+                <label>
+                    Forest Object: {data{'forest'}}
+                </label>
+            </th>
+        </tr>
+        
     </div>
 
 </body>
